--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ email: ""
 # ===============================
 # GitHub Pages settings
 # ===============================
-theme: jekyll-theme-hacker
+theme: jekyll-theme-midnight
 
 # ===============================
 # URL settings (GitHub Pages)
